[package]
name = "mcm"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
geo-types = "0.7.11"
gpx = "0.9.1"
reqwest = {version = "0.11.20", features = ["json"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tempfile = "3.8.0"
tokio = {version = "1.32.0", features = ["full"]}
