[package]
name = "mcm"
version = "0.1.0"
edition = "2021"

[dependencies]
geo-types = "0.7.11"
gpx = "0.9.1"
proj = "0.27.2"
reqwest = {version = "0.11.20", features = ["json"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.32.0", features = ["full"]}
